crates/test-generator/tests/snapshots/rust/test_generated_type_cast_expression.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
value9 as i32;

AST:
(source_file
  (expression_statement
    (type_cast_expression
      value: (identifier "value9")
      type: (primitive_type "i32")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "value9",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
