crates/test-generator/tests/snapshots/rust/test_generated_union_item.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
union TestUnion { field5: i32 }

AST:
(source_file
  (union_item
    name: (type_identifier "TestUnion")
    body: (field_declaration_list
      (field_declaration
        name: (field_identifier "field5")
        type: (primitive_type "i32")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:7 to 1:16 }, name: "TestUnion", definition_type: StructDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:19 to 1:25 }, name: "field5", definition_type: StructFieldDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
