crates/test-generator/tests/snapshots/rust/test_generated_unit_type.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
let var9: () = ();

AST:
(source_file
  (let_declaration
    pattern: (identifier "var9")
    type: (unit_type)
    value: (unit_expression)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:5 to 1:9 }, name: "var9", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
