crates/test-generator/tests/snapshots/rust/test_generated_use_declaration.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
use module::Item1;

AST:
(source_file
  (use_declaration
    argument: (scoped_identifier "module::Item1"
      path: (identifier "module")
      name: (identifier "Item1")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "Item1",
            position: Position {
                start_line: 1,
                start_column: 13,
                end_line: 1,
                end_column: 18,
            },
            definition_type: ImportDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "module",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 5,
                end_line: 1,
                end_column: 11,
            },
            context: Some(
                "scoped_identifier",
            ),
        },
        Usage {
            name: "Item1",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 13,
                end_line: 1,
                end_column: 18,
            },
            context: Some(
                "scoped_identifier",
            ),
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
