crates/test-generator/tests/snapshots/rust/test_generated_while_expression.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
while let Some(val5) = opt2 { break; }

AST:
(source_file
  (expression_statement
    (while_expression
      condition: (let_condition
        pattern: (tuple_struct_pattern
          type: (identifier "Some")
          (identifier "val5")
        )
        value: (identifier "opt2")
      )
      body: (block
        (expression_statement
          (break_expression)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:16 to 1:20 }, name: "val5", definition_type: VariableDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:11 to 1:15 }, name: "Some", kind: Identifier, context: None },
        Usage { position: { 1:24 to 1:28 }, name: "opt2", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
